--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Marie Knowlton",
+	"description": "A project that teaches to build an App that uses NPM",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
