--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 	"license": "MIT",
 	"version": "0.1.0",
 	"dependencies": {
-		"express": "^4.14.0",
-		
-		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+		"express": "^4.14.0"
 		
 	},
 	"main": "server.js",
